<resources>
    <string name="app_name">Bauloy</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="section1">Notifications</string>
    <string name="section2">Inscription</string>
    <string name="section3">Homme du jour</string>
    <string name="action_settings_inscription">Stats</string>
    <string name="preference_file_notation">com.exemple.parfait.bauloy.NOTEBOOK_NOTATION_FILE</string>
    <string name="preference_file_resident">com.exemple.parfait.bauloy.NOTEBOOK_RESIDENT_FILE</string>
    <string name="preference_file_hdj">com.exemple.parfait.bauloy.NOTEBOOK_HDJ_FILE</string>
    <string name="pick_toppings">Se noter</string>
    <string name="pick_toppings_hdj">Choisir les Hommes du Jour</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="MIN_DATE">minDate</string>
    <string name="MAX_DATE">maxDate</string>
    <string name="Send_Msg">Ce message sera envoyé à tous les résidents de Bauloy</string>
    <string name="stats_inscription">Inscrits du jour</string>
    <string name="stats_hj">stats HJ</string>
    <string name="prog_hdj">Programmer hdj</string>
    <string name="resident_list">Liste des résidents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_residents">Residents</string>
    <string name="title_activity_essai">essai</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_resident">Resident</string>
    <string name="title_residents_list">Person</string>
    <string name="title_residents_detail">Residents Detail</string>
    <string name="title_resident_list">Residents</string>
    <string name="title_resident_detail">Resident Detail</string>
    <string name="add_resident">Ajouter</string>
    <string name="resident_name">Prenom</string>
    <string name="resident_phone">Téléphone</string>
    <string name="resident_birthday">Date de naissance (Pour son anniversaire)</string>
    <string name="add_new_resident">Ajouter un nouveau résident</string>
    <string name="deselect_all">Effacer Tout</string>
</resources>
