<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.parfait.bauloy.MainActivity">
    <item
        android:id="@+id/program_hdj"
        android:orderInCategory="100"
        android:title="@string/prog_hdj"
        app:showAsAction="never" />

    <item
        android:id="@+id/inscription_stat"
        android:orderInCategory="100"
        android:title="@string/stats_inscription"
        app:showAsAction="never" />

    <item
        android:id="@+id/homme_du_jour_stat"
        android:orderInCategory="100"
        android:title="@string/stats_hj"
        app:showAsAction="never" />

    <item
        android:id="@+id/resident_list"
        android:orderInCategory="100"
        android:title="@string/resident_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
